--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "MTAyMTQ4MTkwMzczNzUzNjUxMw.Gfa4Jf.FzfXU7ITBasv-56ZhhjMN9jaeN0dZuFd9C9D4s",
+	"token": "MTAyMTQ4MTkwMzczNzUzNjUxMw.G2nGgW.aRE_yXdgS1cCln9BfMw28Jdpdzoouhhy-O_VLM",
     "guildId": "927794591879553024",
     "server_ip": "188.165.179.148",
     "server_port": "22099"
