--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "MTAyMTQ4MTkwMzczNzUzNjUxMw.G2nGgW.aRE_yXdgS1cCln9BfMw28Jdpdzoouhhy-O_VLM",
+	"token": "MTAyMTQ4MTkwMzczNzUzNjUxMw.GDH6iK.ZVcjGSaFfWp86NVLvK4Fk4dP06odtQd2IJ-9JI",
     "guildId": "927794591879553024",
     "server_ip": "188.165.179.148",
     "server_port": "22099"
